--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.29.3",
     "fastify": "^4.11.0",
     "got": "^12.5.3",
+    "humanize-duration": "^3.28.0",
     "lodash": "^4.17.21",
     "p-queue": "^7.3.0",
     "twitter-api-v2": "^1.12.5",
